--- a/frontend/src/scss/components/chat/_message.scss
+++ b/frontend/src/scss/components/chat/_message.scss
@@ -1,10 +1,10 @@
 .MyMessage {
-  width: 300px;
+  width: 100%;
   margin: 0 auto;
   display: flex;
 
   .created {
-    font-size: 12px;
+    font-size: 10px;
     color: #fff;
     margin-top: auto;
     margin-left: auto;
@@ -14,9 +14,9 @@
     border-radius: 10px 10px 0px 10px;
     background: #d7d7d7;
     padding: 10px;
-    font-size: 18px;
+    font-size: 14px;
     color: #000;
-    max-width: 200px;
+    max-width: 50%;
     margin-right: 10px;
     box-sizing: border-box;
     word-wrap: break-word;
@@ -24,11 +24,11 @@
 }
 
 .OtherMessage {
-  width: 300px;
+  width: 95%;
   margin: 0 auto;
   display: flex;
   .created {
-    font-size: 12px;
+    font-size: 10px;
     color: #fff;
     margin-top: auto;
     margin-right: auto;
@@ -38,9 +38,9 @@
     border-radius: 10px 10px 10px 0px;
     background: #fff;
     padding: 10px;
-    font-size: 18px;
+    font-size: 14px;
     color: #000;
-    max-width: 200px;
+    max-width: 100px;
     margin-left: 10px;
     box-sizing: border-box;
     word-wrap: break-word;
@@ -54,7 +54,7 @@
   margin-bottom: 20px;
 
   input {
-    width: 300px;
+    width: 100%;
     border-radius: 10px;
     background: #fff;
     position: relative;
@@ -62,7 +62,7 @@
     padding-right: 80px;
     outline: none;
     color: #000;
-    font-size: 18px;
+    font-size: 13px;
   }
   span {
     position: relative;
