--- a/frontend/src/scss/components/mypage/_friendprofile.scss
+++ b/frontend/src/scss/components/mypage/_friendprofile.scss
@@ -5,16 +5,24 @@
   gap: 20px;
 
   img {
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     border: 3px solid #fff;
     box-sizing: border-box;
   }
 
-  span {
+  &_nickname{
+    display: flex;
+    width: 50%;
     color: #fff;
-    text-align: center;
-    font-size: 30px;
+    font-size: 18px;
+    word-wrap: break-word;
+  }
+
+  @media screen and (max-width: 80px) {
+    &_nickname {
+      font-size: 16px;
+    }
   }
 }
