style : 헤더 아이콘 반응형 수정

--- a/frontend/src/scss/components/chat/_chatroom.scss
+++ b/frontend/src/scss/components/chat/_chatroom.scss
@@ -13,6 +13,10 @@
   left: 0px;
   z-index: 1000;
   gap: 5px;
+  @media screen and (min-width: 1670px) { 
+    width: 300px;
+    top : 68px;
+  }
 
   .upper {
     width: 90%;
@@ -54,6 +58,9 @@
     font-size: 15px;
     margin: 0 auto;
     padding: 10px;
+    @media screen and (min-width: 1670px) { 
+      width: 300px;
+    }
   }
 }
 
