--- a/frontend/src/scss/components/alarm/_alarmlayout.scss
+++ b/frontend/src/scss/components/alarm/_alarmlayout.scss
@@ -21,6 +21,11 @@
     font-size: 20px;
     border-bottom: 1px solid #fff;
   }
+
+  @media screen and (min-width: 1670px) { 
+    width: 300px;
+    top : 68px;
+  }
 }
 
 .alarmlistitem {
