--- a/frontend/src/scss/components/chat/_chatlayout.scss
+++ b/frontend/src/scss/components/chat/_chatlayout.scss
@@ -13,6 +13,11 @@
   left: 0px;
   z-index: 1000;
 
+
+  @media screen and (min-width: 1670px) { 
+    width: 300px;
+    top : 68px;
+  }
   .title {
     width: 90%;
     height: 50px;
