--- a/frontend/src/scss/components/searchuser/_searchuser.scss
+++ b/frontend/src/scss/components/searchuser/_searchuser.scss
@@ -15,6 +15,11 @@
   &_item {
     overflow-y: scroll;
   }
+
+  @media screen and (min-width: 1670px) { 
+    width: 300px;
+    top : 68px;
+  }
 }
 
 .searchuser_item::-webkit-scrollbar {
