--- a/frontend/src/scss/components/common/_feed.scss
+++ b/frontend/src/scss/components/common/_feed.scss
@@ -1,5 +1,5 @@
 .feed {
-  width: 1260px;
+  width: 100%;
   height: 196px;
   border-bottom: 1px solid #f66;
   display: flex;
@@ -24,6 +24,8 @@
     }
     .dots {
       position: absolute;
+      width: 40px;
+      height: 40px;
       right: 0px;
       top: 0px;
     }
@@ -31,7 +33,7 @@
   .text {
     width: 1260px;
     color: #000;
-    font-size: 36px;
+    font-size: 28px;
   }
   .tag {
     color: #000;
@@ -52,19 +54,19 @@
     gap: 10px;
     flex-direction: row;
     align-items: center;
-    font-size: 20px;
+    font-size: 18px;
   }
   .hoverup:hover {
     transform: scale(1.1);
   }
   &_heart_box {
     position: absolute;
-    right: 110px;
+    right: 80px;
     bottom: 20px;
     display: flex;
     gap: 10px;
     flex-direction: row;
     align-items: center;
-    font-size: 20px;
+    font-size: 18px;
   }
 }
