--- a/frontend/src/scss/components/mypage/_friendlist.scss
+++ b/frontend/src/scss/components/mypage/_friendlist.scss
@@ -1,6 +1,6 @@
 .friend {
   margin: 0 auto;
-  width: 210px;
+  width: 70%;
   height: 30px;
   margin-top: 10px;
 
@@ -11,7 +11,7 @@
   }
 
   .follow {
-    width: 105px;
+    width: 50%;
     height: 30px;
     color: #fff;
     font-size: 14px;
@@ -19,7 +19,6 @@
     justify-content: center;
     align-items: center;
     background: #fea3a3;
-
     flex-direction: column;
     gap: 2px;
     cursor: pointer;
@@ -49,16 +48,34 @@
 }
 
 .list {
-  width: 270px;
-  height: 340px;
+  width: 90%;
   border-radius: 20px;
   background: #f66;
   margin: 0 auto;
 }
 
 .profilelist {
+  width: calc(100% - 20px);
+  margin: 0 auto;
   padding: 15px;
+  height: 340px;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction:  column;
   gap: 15px;
+  overflow-y: scroll;
+}
+
+.profilelist::-webkit-scrollbar {
+  width: 11px; /* 스크롤바의 너비 */
+}
+
+.profilelist::-webkit-scrollbar-thumb {
+  background-color: #fff; /* 스크롤바의 색상 */
+  border-radius: 6px; /* 스크롤바의 모서리 둥글게 */
+  border: 3px solid #f66; /* 스크롤바와 컨테이너 사이의 여백 */
+}
+
+.profilelist::-webkit-scrollbar-track {
+  background-color: #f66; /* 스크롤바 배경 색상 */
+  border-radius: 6px; /* 스크롤바 배경의 모서리 둥글게 */
 }
