--- a/frontend/src/scss/components/mypage/_friendlist.scss
+++ b/frontend/src/scss/components/mypage/_friendlist.scss
@@ -13,30 +13,20 @@
   .follow {
     width: 50%;
     height: 30px;
-    color: #fff;
-    font-size: 14px;
+    color: #f66;
+    font-size: 18px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #fea3a3;
-    flex-direction: column;
-    gap: 2px;
+    flex-direction: row;
+    gap: 5px;
     cursor: pointer;
-    span {
-      height: 10px;
-      font-size: 11px;
-    }
-    div {
-      height: 15px;
-    }
   }
 
   .active {
+    color: #fff;
     border-radius: 10px 0px 0px 0px;
     background: #f66;
-    display: flex;
-    flex-direction: column;
-    gap: 2px;
     cursor: pointer;
   }
   .left {
