--- a/frontend/src/scss/components/mypage/_profile.scss
+++ b/frontend/src/scss/components/mypage/_profile.scss
@@ -22,7 +22,7 @@
       border-radius: 50%;
       border: 1px solid #ccc;
     }
-    .editimg{
+    .editimg {
       position: absolute;
       right: 0px;
       bottom: 0px;
@@ -34,12 +34,11 @@
       color: #f66;
       border-radius: 10px;
       margin-top: 5px;
-      &:hover{
+      &:hover {
         background-color: #ccc;
         cursor: pointer;
       }
     }
-    
   }
   &_edit {
     width: 90%;
@@ -51,13 +50,13 @@
     justify-content: center;
     align-items: center;
     color: #fff;
-    &:hover{
-      background-color: #FEA3A3;
+    &:hover {
+      background-color: #fea3a3;
       cursor: pointer;
     }
   }
 
-  &_save{
+  &_save {
     width: 90%;
     height: 30px;
     margin: 0 auto;
@@ -65,12 +64,12 @@
     margin-top: 5px;
     display: flex;
     align-items: center;
-    gap : 5px;
+    gap: 5px;
     color: #fff;
-    button{
+    button {
       border-radius: 10px;
     }
- }
+  }
   .icon {
     width: 20px;
     height: 20px;
@@ -83,7 +82,7 @@
     background: #fff;
     padding: 5px;
     font-size: 32px;
-    &_edit{
+    &_edit {
       margin: 0 auto;
       width: 100%;
       font-size: 20px;
@@ -106,7 +105,7 @@
     word-break: break-all; /* 단어가 부모 요소의 경계를 넘어갈 때 줄 바꿈 */
     white-space: normal; /* 기본 값으로, 텍스트가 공백에서 줄 바꿈 */
     margin-bottom: auto;
-    &_edit{
+    &_edit {
       border: 1px solid #ccc;
     }
   }
