--- a/frontend/src/scss/components/common/_feed.scss
+++ b/frontend/src/scss/components/common/_feed.scss
@@ -1,20 +1,19 @@
 .feed {
   width: 1260px;
-  height: 196px;
   border-bottom: 1px solid #f66;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
   margin-top: 30px;
+  padding-bottom: 30px;
   position: relative;
 
   .upper {
     width: 100%;
-    height: 50px;
+    height: 70px;
     display: flex;
     flex-direction: row;
     gap: 10px;
-    margin-top: 3px;
     position: relative;
 
     .userinfo {
@@ -38,10 +37,9 @@
     font-size: 20px;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     gap: 10px;
-    position: absolute;
-    left: 1px;
-    bottom: 20px;
+    width: 1000px;
   }
 
   &_comment_box {
@@ -66,5 +64,94 @@
     flex-direction: row;
     align-items: center;
     font-size: 20px;
+  }
+
+  &_image_box {
+    .main_img_container {
+      position: relative;
+      width: 500px;
+      height: 500px;
+      display: inline-block;
+
+      .prev_img {
+        position: absolute;
+        width:300px;
+        height:300px;
+        border: 5px solid #f66;
+        border-radius: 20px;
+        left: -100px;
+        bottom: 0px;
+        object-fit: cover;
+        z-index: 0;
+      }
+
+      .next_img {
+        position: absolute;
+        width:300px;
+        height:300px;
+        border: 5px solid #f66;
+        border-radius: 20px;
+        right: -100px;
+        bottom: 0px;
+        object-fit: cover;
+        z-index: 0;
+      }
+
+      .main_img {
+        position: absolute;
+        width: 500px;
+        height: 500px;
+        border: 5px solid #f66;
+        border-radius: 20px;
+        background-color: white;
+        object-fit: cover;
+        z-index: 1;
+      }
+      
+      .image-counter {
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        color: #f66;
+        background-color: rgba(255, 255, 255, 0.5);
+        padding: 10px;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        border-radius: 8px;
+        z-index: 2;
+      }
+
+    }
+
+    .pagination-dots {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      margin: 30px auto;
+
+      .pagination-dot {
+        width: 10px;
+        height: 10px;
+        margin: 0 5px;
+        background-color: #fff;
+        border-radius: 50%;
+        border: 1px solid #bbb;
+        cursor: pointer;
+
+        &.active {
+          background-color: #bbb;
+        }
+      }
+    }
+
+    .slider {
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      width: 100%;
+    }
+    
   }
 }
