--- a/frontend/src/scss/components/community/_feeddetailmodal.scss
+++ b/frontend/src/scss/components/community/_feeddetailmodal.scss
@@ -41,7 +41,7 @@
     }
 
     .feed-detail-left {
-      flex: 1; // This will take the remaining space
+      flex: 1;
       padding: 10px;
       color: #fff;
       background-color: #f66;
@@ -77,6 +77,7 @@
           margin-right: 10px;
           border-width: 3px;
           stroke: #fff;
+          object-fit: cover;
           flex-shrink: 0;
         }
 
@@ -123,7 +124,12 @@
             img {
               border-radius: 20px;
               border: 8px solid #fff;
+              background-color: #fff;
               box-shadow: 5px 5px 4px 0px rgba(0, 0, 0, 0.25);
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              user-select: none;
             }
 
             .prev-button,
@@ -138,6 +144,7 @@
               height: 60px;
               flex-shrink: 0;
               cursor: pointer;
+              user-select: none;
             }
 
             .prev-button {
@@ -153,12 +160,15 @@
               top: 15px;
               right: 15px;
               color: #f66;
-              font-size: 28px;
+              background-color: rgba(255, 255, 255, 0.5);
+              padding: 10px;
+              font-size: 20px;
               font-style: normal;
               font-weight: 400;
               line-height: normal;
               border-radius: 8px;
               z-index: 2;
+              user-select: none;
             }
           }
         }
@@ -169,8 +179,8 @@
           align-items: flex-start;
           margin-left: 20px;
           padding-right: 20px;
-          max-height: 100%; // 부모 요소의 높이를 기준으로 설정
-          overflow-y: auto; // 스크롤 추가
+          max-height: 100%;
+          overflow-y: auto;
 
           .feed-content {
             margin-top: 10px;
@@ -180,7 +190,7 @@
           .feed-tags {
             margin-top: 10px;
             display: flex;
-            flex-wrap: wrap; // 태그가 줄바꿈되도록 설정
+            flex-wrap: wrap;
 
             .tag {
               display: inline-block;
@@ -188,7 +198,7 @@
               color: #fff;
               padding: 5px 5px;
               border-radius: 15px;
-              margin-right: 5px; // 태그 간격 추가
+              margin-right: 5px; /* 태그 간격 추가 */
             }
           }
         }
@@ -196,7 +206,7 @@
     }
 
     .feed-detail-right {
-      width: 500px; // Fixed width for the comments section
+      width: 500px; /* 댓글 섹션의 고정 너비 */
       height: auto;
       flex-shrink: 0;
       padding: 0;
@@ -205,7 +215,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      overflow-y: auto; // 스크롤 추가
+      overflow-y: auto;
     }
 
     .comments {
