--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -18,6 +18,7 @@
 @import 'components/community/communitylist';
 @import 'components/favorite/bestphotoslide';
 @import 'components/favorite/favoriteranklist';
+@import 'components/favorite/favoriterankpostmodal';
 
 @import 'components/chat/chatlayout';
 @import 'components/chat/chatroomlistitem';
