feat : 드롭다운 options 변경시 리셋 구현, fix: options 맵으로 구현한 경우 useMemo로 리셋 안되게 수정

--- a/frontend/src/scss/components/common/_dropdown.scss
+++ b/frontend/src/scss/components/common/_dropdown.scss
@@ -57,9 +57,11 @@
           background-color: #f66;
           border-radius: 10px;
         }
-
       }
+    }
 
+    .dropdown_head_value.is_default {
+      color: #bbbbbb;
     }
   }
 }
