feat: 최애자랑 삭제 기능 구현

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -13,12 +13,14 @@
 @import 'components/common/gallery';
 @import 'components/common/gallerylist';
 @import 'components/common/dropdown';
+@import 'components/common/commonmodal';
 @import 'components/community/communitycard';
 @import 'components/community/communityfavoritelist';
 @import 'components/community/communitylist';
 @import 'components/favorite/bestphotoslide';
 @import 'components/favorite/favoriteranklist';
 @import 'components/favorite/favoriterankpostmodal';
+@import 'components/favorite/actionmenu';
 
 @import 'components/chat/chatlayout';
 @import 'components/chat/chatroomlistitem';
