--- a/frontend/src/scss/components/community/_feeddetailmodal.scss
+++ b/frontend/src/scss/components/community/_feeddetailmodal.scss
@@ -16,14 +16,16 @@
   .modal-content {
     border-style: none;
     width: 1300px;
-    max-height: 90vh;
+    max-width: 1300px;
+    max-height: 602px;
     border-radius: 20px;
     background: #f66;
     display: flex;
     position: absolute;
     flex-direction: row;
     padding: 0;
-    top: 120px;
+    top: 200px;
+    
 
     .close-button {
       position: absolute;
@@ -49,32 +51,22 @@
       background-color: #f66;
       border-radius: 8px 0 0 8px;
       overflow-y: auto;
+      border-radius: 20px;
+      width: 800px;
+      max-width: 800px;
+      
 
-      .feed-icons {
-        width: min-content;
-        display: flex;
-        align-items: center;
-        margin-left: 200px;
-
-        .heart-button {
-          width: 40px;
-          height: 40px;
-        }
-
-        .dots-button {
-          width: 40px;
-          height: 40px;
-          margin-left: 15px;
-        }
-      }
-
+      
       .feed-header {
         display: flex;
         align-items: center;
-
+        justify-content: space-between  ;
+        
         .profile-image {
           width: 50px;
           height: 50px;
+          max-width: 50px;
+          max-height: 50px;
           border-radius: 50%;
           margin-right: 10px;
           border-width: 3px;
@@ -87,7 +79,7 @@
           display: flex;
           flex-direction: column;
           align-items: flex-start;
-
+          
           .nickname {
             font-size: 24px;
             font-style: normal;
@@ -95,32 +87,84 @@
             line-height: normal;
           }
 
-          .date {
+          .feed-date {
             font-size: 14px;
             font-style: normal;
             font-weight: 400;
             line-height: normal;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
+        }
+
+        .feed-icons {
+          width: min-content;
+          display: flex;
+          align-items: center;
+          margin-left: auto;
+          position: relative; 
+  
+          .heart-button {
+            width: 40px;
+            height: 40px;
+            position: relative; 
+            z-index: 1;
+          }
+          .heart-button:hover{
+            cursor: pointer;
+          }
+
+          .like-count {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            bottom: 0px;
+            right: 80px;
+            background-color: white;
+            color: #f66;
+            border-radius: 50%;
+            padding: 2px 6px;
+            font-size: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            
+            box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.25);
+            z-index: 2;
+          }
+  
+          .dots-button {
+            width: 40px;
+            height: 40px;
+            margin-left: 15px;
+            visibility: hidden;
+          }
+          .dots-button:hover{
+            cursor: pointer;
+          }
+          .dots-button.visible {
+            visibility: visible; 
           }
         }
       }
 
       .feed-body {
         margin-top: 10px;
-
+        
         .slider-container {
           display: flex;
           flex-direction: column;
           align-items: center;
-
+          min-height: 200px;
+          justify-content: center;
+          
           .image-slider {
             position: relative;
             display: flex;
             align-items: center;
             justify-content: center;
             margin-bottom: 10px;
-
-            width: 326px;
-            height: 324px;
             flex-shrink: 0;
 
             img {
@@ -128,8 +172,8 @@
               border: 8px solid #fff;
               background-color: #fff;
               box-shadow: 5px 5px 4px 0px rgba(0, 0, 0, 0.25);
-              width: 100%;
-              height: 100%;
+              width: 326px;
+              height: 324px;
               object-fit: cover;
               user-select: none;
             }
@@ -150,11 +194,11 @@
             }
 
             .prev-button {
-              left: -67px;
+              left: -209px;
             }
 
             .next-button {
-              right: -67px;
+              right: -209px;
             }
 
             .image-counter {
@@ -200,7 +244,7 @@
               color: #fff;
               padding: 5px 5px;
               border-radius: 15px;
-              margin-right: 5px; /* 태그 간격 추가 */
+              margin-right: 5px;
             }
           }
         }
@@ -208,8 +252,10 @@
     }
 
     .feed-detail-right {
-      width: 500px; /* 댓글 섹션의 고정 너비 */
-      height: auto;
+      width: 500px;
+      max-width: 500px;
+      height: 602px;
+      max-height: 602px;
       flex-shrink: 0;
       padding: 0;
       border-radius: 20px;
@@ -218,36 +264,49 @@
       flex-direction: column;
       justify-content: space-between;
       overflow-y: auto;
-    }
 
-    .comments {
-      flex: 1;
-      overflow-y: auto;
-      margin-top: 10px;
+      .comment-profile-image {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        margin-right: 10px;
+        border-width: 3px;
+        border-color: #f66;
+        object-fit: cover;
+        flex-shrink: 0;
+        
+      }
 
-      .comment {
-        padding: 10px;
-        margin: 10px;
-        border-radius: 10px;
-        border: 3px solid #f66;
-        background: #fff;
-
-        .comment-header {
-          display: flex;
-          align-items: center;
-          margin-bottom: 5px;
-        }
-
-        .comment-nickname {
-          font-weight: bold;
-        }
-
-        .comment-date {
-          margin-left: auto;
-          color: gray;
+      .comments {
+        flex: 1;
+        overflow-y: auto;
+        margin-top: 10px;
+  
+        .comment {
+          padding: 10px;
+          margin: 10px;
+          border-radius: 10px;
+          border: 3px solid #f66;
+          background: #fff;
+  
+          .comment-header {
+            display: flex;
+            align-items: center;
+            margin-bottom: 5px;
+          }
+  
+          .comment-nickname {
+            font-weight: bold;
+          }
+  
+          .comment-date {
+            margin-left: auto;
+            color: gray;
+          }
         }
       }
     }
+
 
     .comment-input {
       display: flex;
