--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -36,3 +36,4 @@
 @import 'layout/frame';
 @import 'components/community/postfeed';
 @import 'components/community/feeddetailmodal';
+@import 'components/community/_dropdownmenu'
