feat : 메인페이지 레이아웃 구성

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -30,6 +30,8 @@
 @import 'components/searchuser/searchuser';
 
 @import 'components/alarm/alarmlayout';
+
+@import 'components/main/section';
 @import 'base/font';
 @import 'page/mypage';
 @import 'page/login';
