--- a/frontend/src/scss/layout/_frame.scss
+++ b/frontend/src/scss/layout/_frame.scss
@@ -1,7 +1,15 @@
 body {
   width: 100%;
   max-width: 1920px;
-  height: 1080px;
   margin: 0 auto;
   font-family: 'BMJUA';
+}
+body {
+  margin: 0;
+}
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
 }
