--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -30,6 +30,7 @@
 @import 'components/searchuser/searchuser';
 
 @import 'components/alarm/alarmlayout';
+@import 'components/challenge/challenge';
 
 @import 'components/main/section';
 @import 'base/font';
