--- a/frontend/src/scss/components/community/_feeddetailmodal.scss
+++ b/frontend/src/scss/components/community/_feeddetailmodal.scss
@@ -3,7 +3,8 @@
 
   .modal-overlay {
     position: fixed;
-    top: 0;
+    width: max-content;
+    height: auto;
     left: 0;
     right: 0;
     bottom: 0;
@@ -21,20 +22,25 @@
     border-radius: 20px;
     background: #f66;
     display: flex;
-    position: absolute;
+    position: fixed;
     flex-direction: row;
     padding: 0;
     top: 200px;
-    
+    filter: none;
+
+    &.blurred {
+      filter: blur(1px);
+      pointer-events: none;
+    }
 
     .close-button {
       position: absolute;
       color: #f66;
-      top: -110px;
+      top: -32px;
       right: -10px;
       background: transparent;
       border: none;
-      font-size: 24px;
+      font-size: 30px;
       cursor: pointer;
       width: 30px;
       height: 30px;
@@ -329,4 +335,71 @@
       }
     }
   }
+
+  .feed-edit-modal {
+    z-index: 1100;
+  
+    .modal-content {
+      background-color: white;
+      border-radius: 20px 20px 0px 0px;
+      width: 950px;
+      height: 609px;
+      border: 5px solid #f66;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+
+      top: -50px;
+  
+      .close {
+        color: white;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        font-size: 24px;
+        cursor: pointer;
+      }
+  
+      .modal-header {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        background: #f66;
+        border-radius: 10px 10px 0px 0px;
+    
+        font-size: 23px;
+        letter-spacing: 2.3px;
+        font-weight: 400;
+        line-height: 100%; /* 23px */
+    
+        .modal-header-title {
+          width: 90px;
+          height: 44px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          color: #fff;
+          
+          h2 {
+            font-size: 23px;
+          }
+        }
+
+      }
+  
+      .modal-body {
+        flex: 1;
+        padding: 20px;
+        overflow-y: auto;
+      }
+  
+      .submit-container {
+        position: absolute;
+        bottom: 20px;
+        right: 20px;
+        z-index: 10;
+      }
+    }
+  }
+  
 }
