--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -36,4 +36,5 @@
 @import 'layout/frame';
 @import 'components/community/postfeed';
 @import 'components/community/feeddetailmodal';
-@import 'components/community/_dropdownmenu'
+@import 'components/community/_dropdownmenu';
+@import 'page/_passwordreset.scss';
