style : 메인 버튼 스타일 수정

--- a/frontend/src/scss/components/challenge/_challenge.scss
+++ b/frontend/src/scss/components/challenge/_challenge.scss
@@ -1,30 +1,29 @@
-
 .challenge {
-    width: 100%;
-    max-width: 1300px;
-    margin: 0 auto;
-    border-left: 1px solid #f66;
-    border-right: 1px solid #f66;
-    position: relative;
+  width: 100%;
+  max-width: 1300px;
+  margin: 0 auto;
+  border-left: 1px solid #f66;
+  border-right: 1px solid #f66;
+  position: relative;
 
-  .left{
+  .left {
     position: absolute;
     width: 405px;
     height: 705px;
     top: 50px;
     left: 0px;
   }
-  
+
   .video-container {
     position: relative;
     width: 100%;
   }
-  
+
   .video-player {
     width: 100%;
     display: block;
   }
-  
+
   .controls {
     position: absolute;
     bottom: 3px;
@@ -33,7 +32,7 @@
     align-items: center;
     margin-top: 10px;
   }
-  
+
   .play-pause-button {
     color: #fff;
     border: none;
@@ -41,21 +40,21 @@
     margin-right: 10px;
     cursor: pointer;
   }
-  
+
   .progress-bar {
     width: 300px;
     accent-color: #f66;
     &:active {
-        cursor: grabbing;
-      }
-      &:focus {
-        outline: none;
-      }
+      cursor: grabbing;
+    }
+    &:focus {
+      outline: none;
+    }
   }
 }
-.big-play-pause-button{
- position: absolute;
- top: 50%; /* 부모 요소의 상단에서 50% 위치 */
+.big-play-pause-button {
+  position: absolute;
+  top: 50%; /* 부모 요소의 상단에서 50% 위치 */
   left: 50%; /* 부모 요소의 왼쪽에서 50% 위치 */
   transform: translate(-50%, -50%);
   opacity: 1;
@@ -63,15 +62,21 @@
   z-index: 2;
 }
 
-.fade-out{
-    opacity: 1px;
-    animation: test;
-    animation-duration: 3s;
-    animation-iteration-count: forwards;
-    visibility: hidden;
+.fade-out {
+  opacity: 1px;
+  animation: test;
+  animation-duration: 3s;
+  animation-iteration-count: forwards;
+  visibility: hidden;
 }
 
 @keyframes test {
-  0% {opacity: 1; visibility: visible;}
-  100% {opacity: 0; visibility: hidden;}
+  0% {
+    opacity: 1;
+    visibility: visible;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
 }
