--- a/frontend/src/scss/components/signup/_termsmodal.scss
+++ b/frontend/src/scss/components/signup/_termsmodal.scss
@@ -23,35 +23,38 @@
     align-items: center;
 
     .modal-content {
+      position: fixed;
+      top: 150px;
       background: white;
       padding: 20px;
       border-radius: 5px;
-      max-width: 1000px;
-      max-height: 800px;
+      max-width: 800px;
+      max-height: 550px;
       width: 100%;
       height: 100%;
       text-align: center;
-      font-size: 25px;
+      font-size: 18px;
+      overflow-y: scroll;
 
       h2 {
-        font-size: 50px;
+        font-size: 38px;
         margin-top: 20px;
-        margin-bottom: 100px;
+        margin-bottom: 80px;
       }
 
       ul {
-        margin-top: 25px;
+        margin-top: 30px;
         margin-left: 180px;
         text-align: justify;
       }
 
       p {
-        margin-top: 80px;
+        margin-top: 30px;
       }
 
       button {
-        font-size: 50px;
-        margin-top: 80px;
+        font-size: 25px;
+        margin-top: 50px;
       }
     }
 
