--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -21,6 +21,7 @@
 @import 'components/favorite/favoriteranklist';
 @import 'components/favorite/favoriterankpostmodal';
 @import 'components/favorite/actionmenu';
+@import 'components/challenge//challengelist';
 
 @import 'components/chat/chatlayout';
 @import 'components/chat/chatroomlistitem';
@@ -31,6 +32,8 @@
 
 @import 'components/alarm/alarmlayout';
 @import 'components/challenge/challenge';
+@import 'components//challenge//challengeitem';
+@import 'components/challenge/holdmodal';
 
 @import 'components/main/section';
 @import 'base/font';
