feat: 커뮤니티/팬아트 하트 토글 구현

--- a/frontend/src/scss/components/common/_gallery.scss
+++ b/frontend/src/scss/components/common/_gallery.scss
@@ -52,6 +52,7 @@
     }
 
   }
+  
 
 
   &_info {
@@ -68,6 +69,10 @@
     bottom: 0px;
     width: 30px;
     height: 30px;
+  }
+  
+  .hoverup:hover {
+    transform: scale(1.1);
   }
 
   &_comment_box {
