--- a/frontend/src/scss/components/community/_feeddetailmodal.scss
+++ b/frontend/src/scss/components/community/_feeddetailmodal.scss
@@ -268,17 +268,7 @@
       flex-direction: column;
       justify-content: space-between;
       overflow-y: auto;
-
-      .comment-profile-image {
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        margin-right: 10px;
-        border-width: 3px;
-        border-color: #f66;
-        object-fit: cover;
-        flex-shrink: 0;
-      }
+      box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.35);
 
       .comments {
         flex: 1;
@@ -286,47 +276,136 @@
         margin-top: 10px;
 
         .comment {
+          min-width: 460px;
+          min-height: 157px;
+          height: fit-content;
           padding: 10px;
           margin: 10px;
+          // margin-bottom: 20px; // 댓글 사이 간격
           border-radius: 10px;
           border: 3px solid #f66;
           background: #fff;
 
+          .comment-profile-image {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            margin-right: 10px;
+            border-width: 3px;
+            border-color: #f66;
+            object-fit: cover;
+            flex-shrink: 0;
+          }
           .comment-header {
             display: flex;
             align-items: center;
             margin-bottom: 5px;
+
+            .comment-user-info {
+              display: flex;
+              flex-direction: column;
+
+              .comment-nickname {
+                font-size: 24px;
+
+                .comment-date {
+                  font-size: 14px;
+                  margin-left: auto;
+                  color: #000;
+                }
+              }
+            }
+
+            .comment-dots-button {
+              position: relative;
+              margin-left: 180px;
+              width: 24px;
+              height: 24px;
+            }
+            .comment-dots-button:hover {
+              cursor: pointer;
+            }
+            .comment-menu {
+              position: absolute;
+            }
+          }
+          .reply-icon {
+            width: 24px;
+            height: 24px;
+            margin-right: 10px;
+            flex-shrink: 0;
+          }
+          .reply-icon:hover {
+            cursor: pointer;
           }
 
-          .comment-nickname {
-            font-weight: bold;
+          .reply-icon-container {
+            display: flex;
+            flex-direction: row;
+            margin-top: 10px;
+            .reply-count {
+              margin-top: 2px;
+              display: flex;
+              flex-direction: row;
+              font-size: 14px;
+              div {
+                color: #f00;
+              }
+            }
           }
-
-          .comment-date {
-            margin-left: auto;
-            color: gray;
-          }
+        }
+        .comment-content {
+          width: 440px;
+          min-height: 40px;
+          font-size: 24px;
+          padding-inline: 10px;
+          border-radius: 10px;
+          color: #fff;
+          background: #f66;
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
         }
       }
     }
 
-    .comment-input {
+    .comment-input-container {
       display: flex;
+      height: 80px;
+      align-items: center;
+      box-shadow: 1px 1px 20px 0px rgba(0, 0, 0, 0.35);
 
       input {
-        flex: 1;
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        margin-right: 10px;
+        font-size: 24px;
+        color: #fff;
+        border-radius: 10px;
+        background: #f66;
+        width: 460px;
+        height: 40px;
+        margin-left: 20px;
+        padding-inline: 10px;
+        padding-right: 45px;
+        flex-shrink: 0;
+        box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.35);
       }
 
-      button {
-        padding: 10px;
-        background: #007bff;
-        color: white;
-        border: none;
-        border-radius: 4px;
+      input::placeholder {
+        color: #fff;
+      }
+
+      input:focus {
+        outline: none;
+      }
+
+      .comment-write-button {
+        position: absolute;
+        right: 25px;
+        bottom: 25px;
+        width: 30px;
+        height: 30px;
+        flex-shrink: 0;
+      }
+      .comment-write-button:hover {
         cursor: pointer;
       }
     }
