--- a/frontend/src/scss/components/main/_section.scss
+++ b/frontend/src/scss/components/main/_section.scss
@@ -50,7 +50,7 @@
 
 .section2 {
   &-content {
-    background-color: #FEA3A3;
+    background-color: #fea3a3;
     width: 100%;
     height: 100%;
     position: relative;
@@ -123,7 +123,7 @@
 
 .section4 {
   &-content {
-    background-color: #FEA3A3;
+    background-color: #fea3a3;
     width: 100%;
     height: 100%;
     position: relative;
