--- a/frontend/src/scss/components/alarm/_alarmlayout.scss
+++ b/frontend/src/scss/components/alarm/_alarmlayout.scss
@@ -52,6 +52,12 @@
     .content {
       font-size: 14px;
     }
+    .nickname{
+      width: 45%;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+    }
   }
   .lastchattime {
     position: absolute;
