feat: 댓글 메뉴 아이콘 작성자에게만 보이도록 수정

--- a/frontend/src/scss/components/community/_feeddetailmodal.scss
+++ b/frontend/src/scss/components/community/_feeddetailmodal.scss
@@ -321,10 +321,16 @@
               margin-left: 180px;
               width: 24px;
               height: 24px;
+              visibility: hidden;
             }
             .comment-dots-button:hover {
               cursor: pointer;
             }
+
+            .comment-dots-button.visible {
+              visibility: visible;
+            }
+
             .comment-menu {
               position: relative;
               right: 10px;
