--- a/frontend/src/scss/components/community/_feeddetailmodal.scss
+++ b/frontend/src/scss/components/community/_feeddetailmodal.scss
@@ -109,17 +109,17 @@
           margin-left: auto;
           position: relative;
 
-          .heart-button {
+          .feed-heart-button {
             width: 40px;
             height: 40px;
             position: relative;
             z-index: 1;
           }
-          .heart-button:hover {
+          .feed-heart-button:hover {
             cursor: pointer;
           }
 
-          .like-count {
+          .feed-like-count {
             position: absolute;
             width: 20px;
             height: 20px;
@@ -138,17 +138,23 @@
             z-index: 2;
           }
 
-          .dots-button {
+          .feed-dots-button {
             width: 40px;
             height: 40px;
             margin-left: 15px;
             visibility: hidden;
           }
-          .dots-button:hover {
+          .feed-dots-button:hover {
             cursor: pointer;
           }
-          .dots-button.visible {
+          .feed-dots-button.visible {
             visibility: visible;
+          }
+
+          .feed-menu {
+            position: relative;
+            right: 20px;
+            top: -10px;
           }
         }
       }
@@ -316,25 +322,63 @@
               }
             }
 
-            .comment-dots-button {
+            .comment-icons {
+              top: -10px;
+              width: min-content;
+              display: flex;
+              align-items: center;
+              margin-left: auto;
               position: relative;
-              margin-left: 180px;
-              width: 24px;
-              height: 24px;
-              visibility: hidden;
-            }
-            .comment-dots-button:hover {
-              cursor: pointer;
-            }
 
-            .comment-dots-button.visible {
-              visibility: visible;
-            }
+              .comment-heart-button {
+                width: 35px;
+                height: 35px;
+                position: relative;
+                z-index: 1;
+              }
+              .comment-heart-button:hover {
+                cursor: pointer;
+              }
 
-            .comment-menu {
-              position: relative;
-              right: 10px;
-              top: -20px;
+              .comment-dots-button {
+                position: relative;
+                width: 30px;
+                height: 30px;
+                visibility: hidden;
+                margin-left: 12px;
+              }
+              .comment-dots-button:hover {
+                cursor: pointer;
+              }
+
+              .comment-dots-button.visible {
+                visibility: visible;
+              }
+
+              .comment-menu {
+                position: relative;
+                right: 10px;
+                top: -20px;
+              }
+
+              .comment-like-count {
+                position: absolute;
+                width: 18px;
+                height: 18px;
+                bottom: 0px;
+                right: 62px;
+                background-color: #f66;
+                color: #fff;
+                border-radius: 50%;
+                padding: 2px 6px;
+                font-size: 8px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.25);
+                z-index: 2;
+              }
             }
           }
           .reply-icon {
