feat : 마이페이지/내피드 커뮤니티이름 구현

--- a/frontend/src/scss/components/common/_feed.scss
+++ b/frontend/src/scss/components/common/_feed.scss
@@ -28,6 +28,12 @@
       right: 0px;
       top: 0px;
     }
+
+    .community_name {
+      margin-left: 20px;
+      color: #bbb;
+      height: fit-content;
+    }
   }
   .text {
     width: 1260px;
