--- a/frontend/src/scss/components/common/_gallery.scss
+++ b/frontend/src/scss/components/common/_gallery.scss
@@ -1,4 +1,5 @@
 .gallery {
+  position:relative;
   display: flex;
   width: fit-content;
   height: fit-content;
@@ -8,6 +9,13 @@
   border-radius: 20px;
   overflow: hidden;
   box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
+
+  .community_name {
+    position:absolute;
+    top: 10px;
+    right: 20px;
+    color: #bbb;
+  }
 
   .gallery-img {
     width: 310px;
