--- a/frontend/src/scss/components/challenge/_challenge.scss
+++ b/frontend/src/scss/components/challenge/_challenge.scss
@@ -39,6 +39,16 @@
     border-radius: 30px;
     box-shadow: 0px 5px 4px 4px rgba(0, 0, 0, 0.25);
   }
+  .no-video{
+    width: 90%;
+    height: 567px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30px;
+    box-shadow: 0px 5px 4px 4px rgba(0, 0, 0, 0.25);
+  }
 
   .controls {
     width: 90%;
