--- a/frontend/src/scss/components/challenge/_holdmodal.scss
+++ b/frontend/src/scss/components/challenge/_holdmodal.scss
@@ -60,8 +60,8 @@
   margin: auto 0;
   margin-left: 10px;
 }
-.video_label_add{
-  position : absolute;
+.video_label_add {
+  position: absolute;
   left: 0px;
   bottom: 20px;
   display: flex;
@@ -74,7 +74,7 @@
   filter: drop-shadow(3px 3px 4px rgba(0, 0, 0, 0.25));
   border-radius: 30px;
 }
-.video-preview{
+.video-preview {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -108,7 +108,7 @@
   width: 50%;
   height: 100%;
   margin: 0 auto;
-  position: relative;;
+  position: relative;
 }
 
 .input_date {
