--- a/frontend/src/scss/components/mypage/_friendlist.scss
+++ b/frontend/src/scss/components/mypage/_friendlist.scss
@@ -21,7 +21,7 @@
     flex-direction: row;
     gap: 5px;
     cursor: pointer;
-    background-color: #F4F4F4;
+    background-color: #f4f4f4;
   }
 
   .active {
