--- a/frontend/src/scss/page/_communitydetail.scss
+++ b/frontend/src/scss/page/_communitydetail.scss
@@ -110,13 +110,13 @@
 
   .banner {
     position: relative;
+    display:flex;
+    justify-content: center;
     width: 100%;
     height: 500px;
 
     &_img {
-      position: absolute;
-      width: 100%;
-      height: 100%;
+      height:100%;
     }
 
     &_name {
