feat: 최애자랑/ Action Menu 로직 수정

--- a/frontend/src/scss/components/favorite/_actionmenu.scss
+++ b/frontend/src/scss/components/favorite/_actionmenu.scss
@@ -5,6 +5,7 @@
   width: 100px;
   margin: 0;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 
   .action-menu-item {
     width: 100px;
