--- a/frontend/src/scss/components/challenge/_challengedetail.scss
+++ b/frontend/src/scss/components/challenge/_challengedetail.scss
@@ -5,8 +5,8 @@
   margin: 0 auto;
   display: flex;
   flex-direction: row;
-  border: 1px solid black;
   position: relative;
+
   .left-box {
     width: calc(100% / 3) * 1;
     height: 600px;
@@ -84,20 +84,32 @@
     position: fixed;
     top: 100px;
     left: 110px;
-    border: 1px solid black;
   }
   .challenger {
     width: 405px;
     height: 600px;
     position: fixed;
     top: 100px;
-    left: 550px;
-    border: 1px solid black;
+    left: 510px;
+    border-left: 3px solid #f66;
+
+    .no-video {
+      width: 90%;
+      height: 580px;
+      margin: 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 30px;
+      box-shadow: 0px 5px 4px 4px rgba(0, 0, 0, 0.25);
+    }
   }
   .challenge-room {
-    width: 405px;
-    height: 900px;
+    width: 430px;
     margin-left: auto;
-    border: 1px solid black;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    justify-content: space-between;
   }
 }
