--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -35,6 +35,8 @@
 @import 'components//challenge//challengeitem';
 @import 'components/challenge/holdmodal';
 @import 'components/challenge/challengedetail';
+@import 'components/challenge/challengedetailitem';
+@import 'components/challenge/detailmodal';
 
 @import 'components/main/section';
 @import 'base/font';
