--- a/frontend/src/scss/components/challenge/_challengedetail.scss
+++ b/frontend/src/scss/components/challenge/_challengedetail.scss
@@ -6,7 +6,19 @@
   display: flex;
   flex-direction: row;
   position: relative;
-
+  .title {
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 400;
+    letter-spacing: 4.8px;
+    color: #f66;
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
   .left-box {
     width: calc(100% / 3) * 1;
     height: 600px;
