refactor: 액션메뉴 공통컴포넌트화, 최애자랑리스트/ 액션메뉴 밖에서 삭제 모달 컨트롤하도록 수정

--- a/frontend/src/scss/components/favorite/_actionmenu.scss
+++ b/frontend/src/scss/components/favorite/_actionmenu.scss
@@ -1,5 +1,5 @@
 .action-menu {
-  position: absolute; /* 부모 요소에 대해 절대 위치 지정 */
+  position: absolute;
   background-color: white;
   border: 1px solid #ccc;
   width: 100px;
