--- a/frontend/src/scss/components/common/_feed.scss
+++ b/frontend/src/scss/components/common/_feed.scss
@@ -8,6 +8,10 @@
   padding-bottom: 30px;
   position: relative;
 
+  &:hover {
+    background-color: #F0F0F0;
+  }
+
   .upper {
     width: 100%;
     height: 70px;
