feat: 커뮤니티 피드리스트/피드 수정 삭제

--- a/frontend/src/scss/components/community/_postfeed.scss
+++ b/frontend/src/scss/components/community/_postfeed.scss
@@ -163,6 +163,7 @@
       .tag {
         background-color: #f66;
         color: #fff;
+        width: fit-content;
         font-weight: 400;
         line-height: 100%; /* 14px */
         letter-spacing: 1.4px;
