--- a/frontend/src/scss/components/common/_feed.scss
+++ b/frontend/src/scss/components/common/_feed.scss
@@ -25,7 +25,8 @@
       display: flex;
       flex-direction: column;
     }
-    .dots {
+
+    .dots_box {
       position: absolute;
       width: 40px;
       height: 40px;
