style: 답글 입력 폼 크기 조절

--- a/frontend/src/scss/components/community/_feeddetailmodal.scss
+++ b/frontend/src/scss/components/community/_feeddetailmodal.scss
@@ -582,6 +582,7 @@
                 box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.35);
                 textarea {
                   width: 290px;
+                  height: 40px;
                   background-color: transparent;
                   border-color: transparent;
                   color: #fff;
