--- a/frontend/src/scss/components/challenge/_detailmodal.scss
+++ b/frontend/src/scss/components/challenge/_detailmodal.scss
@@ -161,10 +161,11 @@ input[type='datetime-local']::-webkit-calendar-picker-indicator {
 .loading {
   position: fixed;
   top: 50%;
-  left: 60%;
+  left: 80%;
   transform: translate(-50%, -50%);
-  width: 500px;
-  height: 500px;
+  width: 300px;
+  height: 300px;
+  border: 1px solid black;
   color: black;
   height: 100vh;
   display: flex;
