style: 작성 모달 스크롤 및 css 복원

--- a/frontend/src/scss/components/community/_postfeed.scss
+++ b/frontend/src/scss/components/community/_postfeed.scss
@@ -152,7 +152,7 @@
     align-items: center;
     flex-wrap: wrap;
     gap: 10px;
-    max-width: calc(100% - 150px); /* 태그 영역 제한 */
+    max-width: calc(100% - 150px);
 
     .tags {
       display: flex;
