feat: 설정페이지 구현

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -50,4 +50,5 @@
 @import 'components/community/feeddetailmodal';
 @import 'components/community/dropdownmenu';
 @import 'components/community/dropdownreplymenu';
-@import 'page/passwordreset.scss';
+@import 'page/passwordreset';
+@import 'page/settings'
