--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -51,4 +51,4 @@
 @import 'components/community/dropdownmenu';
 @import 'components/community/dropdownreplymenu';
 @import 'page/passwordreset';
-@import 'page/settings'
+@import 'page/settings';
